# Manjusaka_source

./: CMakeLists.txt  Manjusaka.cpp  README.md
.github/workflows/: Build.yml
Source/: Exclude_Thermal_Files.sh  Manjusaka.cpp  Manjusaka_Dpi.cpp  Manjusaka_Monitor.cpp  Manjusaka_Resolution.cpp  Manjusaka_crond.sh  Manjusaka_thermal.sh
